# customer_support_ai_agent

./: .gitignore  README.md  app.py  main.py  output.md  pyproject.toml
customer_support_agent/api/: app_factory.py  dependencies.py
customer_support_agent/api/routers/: __init__.py  drafts.py  health.py  knowledge.py  memory.py  tickets.py
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integration/memory/: __init__.py  mem0_store.py
customer_support_agent/integration/rag/: __init__.py  chroma_kb.py
customer_support_agent/integration/tools/: __init__.py  support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  customer.py  drafts.py
customer_support_agent/schemas/: __init__.py  api.py
customer_support_agent/services/: copilot_service.py  draft_service.py  guardrails_service.py  knowledge_service.py
data/: support.db
data/chroma_rag/: chroma.sqlite3
evals/: _test_support.py  test_full_eval.py
evals/dataset/: golden.json
notebooks/: experiments.ipynb
notebooks/data/mem0-chroma/: chroma.sqlite3
notebooks/data/mem0-qdrant/: meta.json
notebooks/data/mem0-qdrant/collection/mem0/: storage.sqlite
test_chroma_db/: chroma.sqlite3
tests/: test_kb.py  test_simple.py
