[project]
name = "customer-support-agent"
version = "0.1.0"
description = "AI copilot for support agents with FastAPI, LangChain, Mem0, and ChromaDB"
readme = "Plan.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  # --- API & Server ---
  "fastapi>=0.110,<0.116",
  # --- Config & Validation ---
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv",
  # --- LLM / Agent Stack ---
  "langchain>=0.2,<0.4",
  "langchain-core>=0.2,<0.4",
  "langchain-groq>=0.1,<0.2",
  "langchain-text-splitters>=0.2,<0.4",
  # --- Memory / Vector DB ---
  "mem0ai>=0.1,<0.2",
  # --- UI / Client ---
  "streamlit>=1.32,<2",
  "requests",
  "email-validator",
  # --- GenAI SDK ---
  "guardrails-ai>=0.5.0,<0.5.4",
  "spacy>=3.7",
  "google-genai>=1.0.0",
  "chromadb>=0.6.0",
  "typer>=0.12.0",
  "websockets>=14.0",
  "uvicorn>=0.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "playwright>=1.58.0",
  "pytest",
  "ragas>=0.2",
  "deepeval>=1.0",
  "rapidfuzz>=3.10",
]

[tool.pytest.ini_options]
markers = [
  "full_eval: marks the full RAG + agent evaluation suite",
]
filterwarnings = [
  "ignore:Importing NonLLMContextPrecisionWithReference from 'ragas.metrics' is deprecated:DeprecationWarning",
  "ignore:.*LangchainEmbeddingsWrapper is deprecated.*:DeprecationWarning",
  "ignore:.*LangchainLLMWrapper is deprecated.*:DeprecationWarning",
]
